--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
                         </li>
                     </ul>
                     <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Pesquisa" aria-label="Search">
+                        <input class="form-control me-2 w-50" type="search" placeholder="Pesquisa" aria-label="Search">
                         <button class="btn btn-outline-light" type="submit"><i class="fas fa-search"></i></button>
+                        <button type="button" class="btn btn-dark nightmode" onclick="myFunction()"><i class="fas fa-moon"></i></button>
 
                     </form>
-                    <button type="button" class="btn btn-dark nightmode" onclick="myFunction()"><i class="fas fa-moon"></i></button>
+
                 </div>
             </div>
         </nav>
